--- a/.github/workflows/render-and-deploy.yml
+++ b/.github/workflows/render-and-deploy.yml
@@ -1,17 +1,42 @@
-  - name: Setup R
-    uses: r-lib/actions/setup-r@v2
+name: Render R Notebook and Deploy to gh-pages
 
-  - name: Install R packages
-    run: |
-      Rscript -e 'install.packages(c("rmarkdown","knitr","psych","corrplot","ggplot2","tidyr","MASS"), repos="https://cloud.r-project.org")'
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
-  - name: Render R Markdown to HTML
-    run: |
-      Rscript -e 'rmarkdown::render("FactorAnalysisShopping.Rmd", output_file = "index.html", output_dir = "site")'
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-  - name: Deploy to gh-pages branch (using peaceiris/actions-gh-pages)
-    uses: peaceiris/actions-gh-pages@v3
-    with:
-      github_token: ${{ secrets.GITHUB_TOKEN }}
-      publish_branch: gh-pages
-      publish_dir: ./site
+jobs:
+  render-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxml2-dev libcurl4-openssl-dev libssl-dev
+
+      - name: Install R packages
+        run: |
+          Rscript -e 'options(repos="https://cloud.r-project.org"); pkgs <- c("rmarkdown","knitr","psych","corrplot","ggplot2","tidyr","MASS"); install.packages(setdiff(pkgs, rownames(installed.packages())))'
+
+      - name: Render R Markdown to HTML
+        run: |
+          Rscript -e 'rmarkdown::render("FactorAnalysisShopping.Rmd", output_file = "index.html", output_dir = "site")'
+
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./site
